// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FontIcon renders FontIcon correctly 1`] = `
<i
  aria-hidden="true"
  class=
      ms-Icon
      {
        display: inline-block;
        text-decoration: inherit;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: "FabricMDL2Icons-2";
        font-style: normal;
        font-weight: normal;
        speak: none;
      }
  data-icon-name="CompassNW"
  style="font-family: \\"FabricMDL2Icons-2\\";"
>
  
</i>
`;

exports[`FontIcon renders FontIcon with children correctly 1`] = `
<i
  aria-hidden="true"
  class=
      ms-Icon
      {
        display: inline-block;
        text-decoration: inherit;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: "FabricMDL2Icons";
        font-style: normal;
        font-weight: normal;
        speak: none;
      }
  data-icon-name="Upload"
  style="font-family: \\"FabricMDL2Icons\\";"
>
  
</i>
`;

exports[`FontIcon renders named FontIcon correctly 1`] = `
<i
  aria-label="compass"
  class=
      ms-Icon
      {
        display: inline-block;
        text-decoration: inherit;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: "FabricMDL2Icons-2";
        font-style: normal;
        font-weight: normal;
        speak: none;
      }
  data-icon-name="CompassNW"
  role="img"
  style="font-family: \\"FabricMDL2Icons-2\\";"
>
  
</i>
`;
